[project]
name = "retrieval-tools"
version = "2024.11.19"
authors = [
  { name="Frank Liu", email="frank.liu@voyageai.com" },
]
requires-python = ">=3.9"
description = "Useful tools for building search/retrieval systems."
readme = "README.md"
dependencies=[
    "numpy >= 1.24.0",
    "PyMuPDF >= 1.24.3",
    "anthropic >= 0.28.0",
]
classifiers=[
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/fzliu/retrieval-toolbox"
Issues = "https://github.com/fzliu/retrieval-toolbox/issues"

[tool.setuptools]
packages = ["retrieval"]
